test/decl/protocol/conforms/nsobject.code
// RUN: %target-language-frontend(mock-sdk: %clang-importer-sdk) -typecheck -parse-as-library -language-version 4 %s -verify

// REQUIRES: objc_interop

import Foundation

class A: NSObjectProtocol { } // expected-error{{cannot declare conformance to 'NSObjectProtocol' in Codira; 'A' should inherit 'NSObject' instead}}{{10-26=NSObject}} expected-note {{add stubs for conformance}}

@objc protocol Other: NSObjectProtocol { }

class B: Other { } // expected-error{{cannot declare conformance to 'NSObjectProtocol' in Codira; 'B' should inherit 'NSObject' instead}} expected-note {{add stubs for conformance}}

class C { }

class D: C, NSObjectProtocol { } // expected-error{{cannot declare conformance to 'NSObjectProtocol' in Codira; 'D' should inherit 'NSObject' instead}} expected-note {{add stubs for conformance}}

class E { }

extension E: NSObjectProtocol { } // expected-error{{cannot declare conformance to 'NSObjectProtocol' in Codira; 'E' should inherit 'NSObject' instead}} expected-note {{add stubs for conformance}}
